src/test/ui/consts/uninhabited-const-issue-61744.stderr
error[E0391]: cycle detected when const-evaluating `hint_unreachable`
  --> $DIR/uninhabited-const-issue-61744.rs:8:5
   |
LL |     fake_type()
   |     ^^^^^^^^^^^
   |
note: ...which requires const-evaluating `fake_type`...
  --> $DIR/uninhabited-const-issue-61744.rs:4:5
   |
LL |     hint_unreachable()
   |     ^^^^^^^^^^^^^^^^^^
   = note: ...which again requires const-evaluating `hint_unreachable`, completing the cycle
note: cycle used when const-evaluating `fake_type`
  --> $DIR/uninhabited-const-issue-61744.rs:4:5
   |
LL |     hint_unreachable()
   |     ^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
